--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -133,7 +133,7 @@ const {
           title="Diseño Responsivo"
           description="Adaptabilidad y eficiencia en diferentes dispositivos."
           IconComponent={HiOutlineCodeBracketSquare}
-          bgColor="orange-500"
+          bgColor="violet-500"
         />
         <FeatureCard
           title="Integración de Seguridad"
