--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,159 +1,16 @@
 ---
-import { Image } from "astro:assets";
-import * as FaIcons from "react-icons/fa";
-import * as HiIcons from "react-icons/hi2";
-import * as IoIcons from "react-icons/io5";
-import WaveSVG from "../assets/background/wave.png";
-import WebsiteIllustration from "../assets/images/illustrations/pair_programming.svg";
-import ResponsiveIllustration from "../assets/images/illustrations/responsive.svg";
-import Subtitle from "../components/heading/Subtitle.astro";
-import ServiceCard from "../components/ui/ServiceCard.astro";
-import FeatureCard from "../components/ui/FeatureCard.astro";
 import Layout from "../layouts/Layout.astro";
-const { FaArrowRight } = FaIcons;
-const { IoLogoWebComponent } = IoIcons;
-const {
-  HiOutlineCodeBracketSquare,
-  HiOutlineBuildingStorefront,
-  HiOutlineLightBulb,
-  HiOutlineScale,
-  HiOutlineShieldCheck,
-} = HiIcons;
+import AboutSection from "../pages/sections/index/AboutSection.astro";
+import HeroSection from "../pages/sections/index/HeroSection.astro";
+import ServiceSection from "../pages/sections/index/ServiceSection.astro";
+import FeatureSection from "../pages/sections/index/FeatureSection.astro";
 ---
 
 <Layout
   title="RysthDesign | Desarrollador de Aplicaciones y Sitios Web Profesionales | Tíendas en Línea | HTML, CSS, JavaScript, React, Ruby on Rails, WordPress"
 >
-  <section class="h-full p-2 lg:h-max">
-    <Image src={WaveSVG} alt="" class="absolute top-0 left-0 w-full md:w-4/5" />
-    <article
-      class="relative z-20 max-w-screen-xl gap-20 py-16 mx-auto space-y-10 h-max lg:py-32 lg:pb-16 lg:grid lg:grid-cols-2"
-    >
-      <Image src={ResponsiveIllustration} alt="" class="w-full lg:h-full" />
-      <main
-        class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col"
-      >
-        <h2
-          class="text-2xl font-bold md:text-3xl lg:text-5xl lg:max-w-2xl lg:!leading-[3.5rem]"
-        >
-          Desarrollo de Aplicaciones y Sitios Web Profesionales
-        </h2>
-        <p
-          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
-        >
-          Servicios de desarrollo web para negocios con soluciones tecnológicas
-          modernas, escalables y seguras.
-        </p>
-        <div class="mt-10">
-          <a
-            href="http://tinyurl.com/contact-ws"
-            target="_blank"
-            class="text-xs text-white border-transparent btn lg:text-sm btn-neutral bg-brand-blue group"
-          >
-            Contactar
-            <FaArrowRight
-              className="block text-xl group-hover:translate-x-1 transition"
-            />
-          </a>
-        </div>
-      </main>
-    </article>
-  </section>
-  <section class="p-2">
-    <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-36">
-      <Subtitle
-        title="Nuestros Servicios"
-        description="Desarrollo web y diseño de sitios intuitivos, con enfoque en plataformas e-commerce innovadoras y experiencia de usuario."
-      />
-
-      <section class="grid grid-cols-1 gap-6 mt-16 md:mt-20 md:grid-cols-3">
-        <ServiceCard
-          title="Aplicaciones Web"
-          description="Aplicaciones web robustas y escalables, con tecnologías modernas para negocios en crecimiento."
-          IconComponent={HiOutlineCodeBracketSquare}
-          bgColorClass="bg-cyan-100"
-        />
-
-        <ServiceCard
-          title="Diseño de Sitios Web"
-          description="Diseños web atractivos y funcionales, centrados en la experiencia del usuario y la identidad de marca."
-          IconComponent={IoLogoWebComponent}
-          bgColorClass="bg-indigo-100"
-        />
-
-        <ServiceCard
-          title="Plataformas e-Commerce"
-          description="Soluciones e-commerce personalizadas para una experiencia de compra óptima y segura."
-          IconComponent={HiOutlineBuildingStorefront}
-          bgColorClass="bg-purple-100"
-        />
-      </section>
-    </article>
-  </section>
-  <section class="p-2">
-    <article
-      class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:pb-24"
-    >
-      <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
-      <main
-        class="relative z-20 flex flex-col items-center justify-center md:items-start gap-7 md:gap-10"
-      >
-        <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
-        <div class="space-y-2 text-center md:space-y-4 md:text-left">
-          <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
-            Profesionales Expertos en Diseño y Desarrollo Web Personalizados
-          </h2>
-          <p
-            class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
-          >
-            Ofrecemos plataformas 100% seguras, funcionales y personalizadas,
-            asegurando que cada proyecto no solo complemente, sino que también
-            potencie las capacidades de tu negocio.
-          </p>
-        </div>
-        <a
-          href="/"
-          class="text-white btn btn-neutral bg-brand-blue max-w-max group"
-        >
-          Descubre más <FaArrowRight
-            className="block text-xl group-hover:translate-x-1 transition"
-          />
-        </a>
-      </main>
-    </article>
-  </section>
-  <section class="p-2">
-    <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-24">
-      <Subtitle
-        title="Nuestras Características"
-        description="Explora nuestras competencias clave en diseño y desarrollo web."
-      />
-      <section class="grid grid-cols-1 gap-6 mt-16 md:mt-20 md:grid-cols-4">
-        <FeatureCard
-          title="Diseño Responsivo"
-          description="Adaptabilidad y eficiencia en diferentes dispositivos."
-          IconComponent={HiOutlineCodeBracketSquare}
-          bgColor="violet-500"
-        />
-        <FeatureCard
-          title="Integración de Seguridad"
-          description="Seguridad robusta para protección de datos."
-          IconComponent={HiOutlineShieldCheck}
-          bgColor="green-500"
-        />
-        <FeatureCard
-          title="Infraestructura Escalable"
-          description="Soluciones que crecen con tus necesidades."
-          IconComponent={HiOutlineScale}
-          bgColor="indigo-500"
-        />
-        <FeatureCard
-          title="Desempeño Óptimo"
-          description="Alta eficiencia y velocidad en cada proyecto."
-          IconComponent={HiOutlineLightBulb}
-          bgColor="blue-500"
-        />
-      </section>
-    </article>
-  </section>
+  <HeroSection />
+  <ServiceSection />
+  <AboutSection />
+  <FeatureSection />
 </Layout>
