--- a/src/components/heading/Subtitle.astro
+++ b/src/components/heading/Subtitle.astro
@@ -1,9 +1,9 @@
 ---
-const { title, description } = Astro.props;
+const { title, description, textColor } = Astro.props;
 ---
 
 <header class="space-y-3 text-center">
-  <h2 class="text-2xl font-bold md:text-4xl">{title}</h2>
+  <h2 class={`text-2xl font-bold md:text-4xl ${textColor}`}>{title}</h2>
   <p class="max-w-xl mx-auto text-sm text-gray-500 md:text-base">
     {description}
   </p>
