--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -10,13 +10,13 @@ const {
 } = HiIcons;
 ---
 
-<section class="p-2">
-  <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-24">
+<section class="p-4">
+  <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-36">
     <Subtitle
       title="Nuestras Características"
       description="Explora nuestras competencias clave en diseño y desarrollo web."
     />
-    <section class="grid grid-cols-1 gap-6 mt-16 md:mt-20 md:grid-cols-4">
+    <section class="grid grid-cols-1 gap-4 mt-12 md:my -20 md:grid-cols-4">
       <FeatureCard
         title="Diseño Responsivo"
         description="Adaptabilidad y eficiencia en diferentes dispositivos."
