--- a/src/components/heading/Subtitle.astro
+++ b/src/components/heading/Subtitle.astro
@@ -1,10 +1,12 @@
 ---
-const { title, description, textColor } = Astro.props;
+const { title, description, textColor, descriptionColor } = Astro.props;
 ---
 
 <header class="space-y-3 text-center">
   <h2 class={`text-2xl font-bold md:text-4xl ${textColor}`}>{title}</h2>
-  <p class="max-w-xl mx-auto text-sm text-gray-500 md:text-base">
+  <p
+    class={`max-w-xl mx-auto text-sm text-gray-500 md:text-base ${descriptionColor}`}
+  >
     {description}
   </p>
 </header>
