--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,11 @@ import AboutSection from "../pages/sections/index/AboutSection.astro";
 import HeroSection from "../pages/sections/index/HeroSection.astro";
 import ServiceSection from "../pages/sections/index/ServiceSection.astro";
 import FeatureSection from "../pages/sections/index/FeatureSection.astro";
+import Subtitle from "@/components/heading/Subtitle.astro";
+import ProjectOne from "../assets/images/projects/project_1.png";
+import ProjectTwo from "../assets/images/projects/project_2.png";
+import ProjectThree from "../assets/images/projects/project_3.png";
+import { Image } from "astro:assets";
 ---
 
 <Layout
@@ -13,4 +18,61 @@ import FeatureSection from "../pages/sections/index/FeatureSection.astro";
   <ServiceSection />
   <AboutSection />
   <FeatureSection />
+  <section class="p-4 bg-brand-blue">
+    <article class="relative max-w-screen-xl py-12 mx-auto md:py-24 md:pb-52">
+      <Subtitle
+        title="Galería de Proyectos"
+        description="Realizamos proyectos de alta calidad y gran alcance, para asegurar el éxito de tu negocio."
+        textColor="text-white"
+        descriptionColor="!text-white/75"
+      />
+      <main
+        class="left-0 right-0 grid w-full gap-4 my-12 lg:my-24 md:gap-8 lg:absolute md:-bottom-64 sm:grid-cols-2 lg:grid-cols-4"
+      >
+        <a
+          href="https://updateec.netlify.app/"
+          target="_blank"
+          rel="noreferrer"
+          class="block transition duration-300 rounded-xl hover:grayscale hover:shadow-xl"
+        >
+          <figure class="rounded-xl">
+            <Image
+              src={ProjectOne}
+              alt="Project Image"
+              class="w-full h-full rounded-xl"
+            />
+          </figure>
+        </a>
+        <a
+          href="https://jprefrigeracion.netlify.app/"
+          target="_blank"
+          rel="noreferrer"
+          class="block transition duration-300 rounded-xl hover:grayscale hover:shadow-xl"
+        >
+          <figure class="rounded-xl">
+            <Image
+              src={ProjectTwo}
+              alt="Project Image"
+              class="w-full h-full rounded-xl"
+            />
+          </figure>
+        </a>
+        <a
+          href="https://react-tramitesec-uxbm.onrender.com/"
+          target="_blank"
+          rel="noreferrer"
+          class="block transition duration-300 rounded-xl hover:grayscale hover:shadow-xl"
+        >
+          <figure class="rounded-xl">
+            <Image
+              src={ProjectThree}
+              alt="Project Image"
+              class="w-full h-full rounded-xl"
+            />
+          </figure>
+        </a>
+      </main>
+    </article>
+  </section>
+  <hr class="border-none mt-60 bg-none" />
 </Layout>
