--- a/src/pages/sections/index/AboutSection.astro
+++ b/src/pages/sections/index/AboutSection.astro
@@ -5,9 +5,9 @@ const { FaArrowRight } = FaIcons;
 import WebsiteIllustration from "../../../assets/images/illustrations/pair_programming.svg";
 ---
 
-<section class="p-2">
+<section class="p-4">
   <article
-    class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:pb-24"
+    class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:py-24"
   >
     <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
     <main
