--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -6,10 +6,10 @@ import ResponsiveIllustration from "../../../assets/images/illustrations/respons
 const { FaArrowRight } = FaIcons;
 ---
 
-<section class="h-full p-2 lg:h-max">
+<section class="h-full p-4 lg:h-max">
   <Image src={WaveSVG} alt="" class="absolute top-0 left-0 w-full md:w-4/5" />
   <article
-    class="relative z-20 max-w-screen-xl gap-20 py-16 mx-auto space-y-10 h-max lg:py-32 lg:pb-16 lg:grid lg:grid-cols-2"
+    class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 h-max lg:py-32 md:py-24 lg:grid lg:grid-cols-2"
   >
     <Image src={ResponsiveIllustration} alt="" class="w-full lg:h-full" />
     <main
