--- a/src/pages/sections/index/ServiceSection.astro
+++ b/src/pages/sections/index/ServiceSection.astro
@@ -8,7 +8,7 @@ const { IoLogoWebComponent } = IoIcons;
 ---
 
 <section class="p-4">
-  <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-36">
+  <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:pt-36">
     <Subtitle
       title="Nuestros Servicios"
       description="Desarrollo web y diseño de sitios intuitivos, con enfoque en plataformas e-commerce innovadoras y experiencia de usuario."
