Update brand colors.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import TechnologySection from "../pages/sections/index/TechnologySection.astro";
 ---
 
 <Layout
-  title="RysthDesign | Desarrollador de Aplicaciones y Sitios Web Profesionales | Tíendas en Línea | HTML, CSS, JavaScript, React, Ruby on Rails, WordPress"
+  title="RysthDesign | Diseño y Desarrollo de Sitios Web Profesionales | Aplicaciones Web | Tíendas en Línea | Páginas Web Guayaquil"
 >
   <HeroSection />
   <ServiceSection />
