--- a/src/pages/sections/index/AboutSection.astro
+++ b/src/pages/sections/index/AboutSection.astro
@@ -28,7 +28,7 @@ import WebsiteIllustration from "../../../assets/images/illustrations/pair_progr
       </div>
       <a
         href="/"
-        class="text-white btn btn-neutral bg-brand-blue max-w-max group"
+        class="text-white border-transparent btn btn-neutral bg-brand-blue max-w-max group"
       >
         Descubre más <FaArrowRight
           className="block text-xl group-hover:translate-x-1 transition"
