--- a/src/pages/sections/index/ProjectSection.astro
+++ b/src/pages/sections/index/ProjectSection.astro
@@ -6,7 +6,7 @@ import ProjectThree from "../../../assets/images/projects/project_3.png";
 import ProjectCard from "@/components/ui/ProjectCard.astro";
 ---
 
-<section class="p-4 bg-brand-blue">
+<section class="p-4 bg-gradient-to-br bg-brand-gradient">
   <article class="relative max-w-screen-xl py-12 mx-auto md:py-24 md:pb-52">
     <Subtitle
       title="Galería de Proyectos"
