--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,8 @@ const { title } = Astro.props;
   @import url("https://fonts.cdnfonts.com/css/poppins");
 
   :root {
-    --CL-primary: #2e3191;
+    --CL-primary: #3a3eab;
+    --CL-secondary: #2a299e;
   }
 
   /* width */
@@ -48,7 +49,7 @@ const { title } = Astro.props;
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #2e3191;
+    background: var(--CL-primary);
     border-radius: 10rem;
   }
 
@@ -64,6 +65,10 @@ const { title } = Astro.props;
 
   .bg-brand-blue {
     @apply bg-[var(--CL-primary)];
+  }
+
+  .bg-brand-gradient {
+    @apply from-[var(--CL-primary)] to-[var(--CL-secondary)];
   }
 
   .text-brand-blue {
