--- a/src/pages/sections/index/AboutSection.astro
+++ b/src/pages/sections/index/AboutSection.astro
@@ -16,14 +16,14 @@ import WebsiteIllustration from "../../../assets/images/illustrations/pair_progr
       <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
       <div class="space-y-2 text-center md:space-y-4 md:text-left">
         <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
-          Profesionales Expertos en Diseño y Desarrollo Web Personalizados
+          Profesional Experto en Diseño y Desarrollo Web Personalizados
         </h2>
         <p
           class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
         >
-          Ofrecemos plataformas 100% seguras, funcionales y personalizadas,
-          asegurando que cada proyecto no solo complemente, sino que también
-          potencie las capacidades de tu negocio.
+          Con nuestra agencia 100% dígital ofrecemos plataformas seguras,
+          funcionales y personalizadas, asegurando que cada proyecto no solo
+          complemente, sino que también potencie las capacidades de tu negocio.
         </p>
       </div>
       <a
