--- a/src/pages/sections/index/StatSection.astro
+++ b/src/pages/sections/index/StatSection.astro
@@ -1,7 +1,48 @@
 ---
-
+import * as IoIcons from "react-icons/io5";
+import * as FaIcons from "react-icons/fa6";
+const { IoBriefcase, IoDesktop, IoSchool } = IoIcons;
+const { FaStar } = FaIcons;
 ---
 
-<section class="p-2">
-  <article class="max-w-screen-xl py-12 mx-auto md:py-24"></article>
+<section class="p-2 bg-gradient-to-r bg-brand-gradient">
+  <article class="max-w-screen-xl py-12 mx-auto md:py-24">
+    <main class="grid gap-8 sm:grid-cols-2 md:grid-cols-4">
+      <!-- Proyectos Realizados -->
+      <div class="flex flex-col items-center justify-center gap-4 text-white">
+        <IoDesktop className="h-20 w-20" />
+        <div class="space-y-2 text-center">
+          <p class="text-4xl font-bold">+10</p>
+          <p class="text-sm">Proyectos Realizados</p>
+        </div>
+      </div>
+
+      <!-- Años de Experiencia Académica -->
+      <div class="flex flex-col items-center justify-center gap-4 text-white">
+        <IoSchool className="h-20 w-20" />
+        <div class="space-y-2 text-center">
+          <p class="text-4xl font-bold">+4</p>
+          <p class="text-sm">Años de Estudio Académico</p>
+        </div>
+      </div>
+
+      <!-- Experiencia en Desarrollo Web -->
+      <div class="flex flex-col items-center justify-center gap-4 text-white">
+        <IoBriefcase className="h-20 w-20" />
+        <div class="space-y-2 text-center">
+          <p class="text-4xl font-bold">+700</p>
+          <p class="text-sm">Horas de Experiencia Profesional</p>
+        </div>
+      </div>
+
+      <!-- Reseñas en Google -->
+      <div class="flex flex-col items-center justify-center gap-4 text-white">
+        <FaStar className="h-20 w-20" />
+        <div class="space-y-2 text-center">
+          <p class="text-4xl font-bold">+20</p>
+          <p class="text-sm">Reseñas de Clientes</p>
+        </div>
+      </div>
+    </main>
+  </article>
 </section>
