--- a/src/pages/sections/index/TechnologySection.astro
+++ b/src/pages/sections/index/TechnologySection.astro
@@ -10,7 +10,7 @@ import WordpressImage from "@/assets/images/technologies/wordpress.svg";
 ---
 
 <section class="p-2">
-  <article class="max-w-screen-xl py-12 mx-auto">
+  <article class="max-w-screen-xl py-12 mx-auto md:pb-24">
     <main class="flex flex-wrap justify-center gap-4 md:gap-8">
       <TechnologyCard src={HTMLImage} alt="HTML Logo" />
       <TechnologyCard src={CSSImage} alt="CSS Logo" />
