--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import HeroSection from "../pages/sections/index/HeroSection.astro";
 import ProjectSection from "../pages/sections/index/ProjectSection.astro";
 import ServiceSection from "../pages/sections/index/ServiceSection.astro";
 import TechnologySection from "../pages/sections/index/TechnologySection.astro";
+import StatSection from "../pages/sections/index/StatSection.astro";
 ---
 
 <Layout
@@ -18,4 +19,5 @@ import TechnologySection from "../pages/sections/index/TechnologySection.astro";
   <ProjectSection />
   <hr class="hidden border-none md:block md:mt-56 bg-none" />
   <TechnologySection />
+  <StatSection />
 </Layout>
