--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import NavigationBar from "@/components/navigation/NavigationBar.astro";
+import FooterBar from "@/components/navigation/FooterBar.astro";
 interface Props {
   title: string;
 }
@@ -22,10 +23,7 @@ const { title } = Astro.props;
   <body>
     <NavigationBar />
     <slot />
-    <script
-      is:inline
-      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
-    ></script>
+    <FooterBar />
   </body>
 </html>
 
