--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -32,9 +32,9 @@ const { FaWhatsapp } = ReactIcons;
           class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
         >
           <li><a href="/">Inicio</a></li>
-          <li><a href="/">Servicios</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contactos</a></li>
+          <li><a href="/servicio">Servicios</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="/contactos">Contactos</a></li>
         </ul>
       </div>
       <a class="text-xl" href="/">
@@ -44,9 +44,9 @@ const { FaWhatsapp } = ReactIcons;
     <div class="hidden text-white navbar-center lg:flex">
       <ul class="gap-2 px-1 menu menu-horizontal">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/">Servicios</a></li>
-        <li><a href="/">Portfolio</a></li>
-        <li><a href="/">Contactos</a></li>
+        <li><a href="/servicio">Servicios</a></li>
+        <li><a href="/portfolio">Portfolio</a></li>
+        <li><a href="/contactos">Contactos</a></li>
       </ul>
     </div>
     <div class="navbar-end">
