--- a/src/components/navigation/FooterBar.astro
+++ b/src/components/navigation/FooterBar.astro
@@ -1,16 +1,15 @@
 ---
 import { Image } from "astro:assets";
 import * as FaIcons from "react-icons/fa6";
-import * as TiIcons from "react-icons/ti";
-import BrandImage from "../../assets/images/brand/brand.svg";
+import BrandImage from "../../assets/images/brand/brand_dark.svg";
 const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
 ---
 
 <footer class="p-4 bg-white">
-  <div class="max-w-xl py-12 mx-auto">
+  <div class="max-w-xl py-12 mx-auto pb:0">
     <header class="flex flex-col items-center justify-center">
       <a
-        class="grid w-40 h-24 p-4 text-xl border-transparent place-items-center btn btn-neutral bg-brand-blue"
+        class="grid w-40 p-4 text-xl border-transparent place-items-center"
         href="/"
       >
         <Image src={BrandImage} alt="RysthDesign Logo" class="w-full h-full" />
@@ -18,50 +17,13 @@ const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
     </header>
 
     <p
-      class="max-w-md mx-auto mt-6 text-sm leading-relaxed text-center text-gray-500"
+      class="max-w-sm mx-auto text-sm leading-relaxed text-center text-gray-500"
     >
       Diseño y Desarrollo de Sitios Web Profesionales | Aplicaciones Web |
       Tíendas en Línea | Páginas Web
     </p>
 
-    <ul
-      class="flex flex-wrap justify-center gap-4 mt-6 text-sm md:gap-8 lg:gap-12"
-    >
-      <li>
-        <a class="text-gray-700 transition hover:text-gray-700/75" href="/">
-          Inicio
-        </a>
-      </li>
-
-      <li>
-        <a
-          class="text-gray-700 transition hover:text-gray-700/75"
-          href="/servicios"
-        >
-          Servicios
-        </a>
-      </li>
-
-      <li>
-        <a
-          class="text-gray-700 transition hover:text-gray-700/75"
-          href="/portfolio"
-        >
-          Portfolio
-        </a>
-      </li>
-
-      <li>
-        <a
-          class="text-gray-700 transition hover:text-gray-700/75"
-          href="/contactos"
-        >
-          Contactos
-        </a>
-      </li>
-    </ul>
-
-    <ul class="flex justify-center gap-6 mt-6 md:gap-8">
+    <ul class="flex justify-center gap-6 mt-4 md:gap-8">
       <li>
         <a
           href="https://www.instagram.com/rysthdesign/"
@@ -91,4 +53,7 @@ const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
       </li>
     </ul>
   </div>
+  <p class="pt-4 text-sm text-center text-gray-400 border-t">
+    RysthDesign © 2024. Todos los Derechos Reservados.
+  </p>
 </footer>
