Improve SEO and Accesibility.

--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -13,6 +13,7 @@ const { FaWhatsapp } = ReactIcons;
           tabindex="0"
           role="button"
           class="text-white btn btn-ghost lg:hidden ps-0"
+          aria-label="Toggle button menu"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
