--- a/src/pages/sections/index/AboutSection.astro
+++ b/src/pages/sections/index/AboutSection.astro
@@ -7,7 +7,7 @@ import WebsiteIllustration from "../../../assets/images/illustrations/pair_progr
 
 <section class="p-4">
   <article
-    class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:py-24"
+    class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:pt-24"
   >
     <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
     <main
