--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -3,7 +3,7 @@ const { title, description, IconComponent, bgColorClass } = Astro.props;
 ---
 
 <div
-  class="flex flex-col items-center justify-center p-4 text-center border h-96 group"
+  class="flex flex-col items-center justify-center p-4 text-center transition shadow hover:shadow-lg h-96 group rounded-xl"
 >
   <header class="relative mb-6">
     <IconComponent className=" h-28 w-28 relative z-20" />
