--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -13,7 +13,7 @@ const { FaArrowRight } = FaIcons;
     class="absolute top-0 left-0 w-full md:w-4/5"
   />
   <article
-    class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 h-max lg:py-32 md:py-24 lg:grid lg:grid-cols-2"
+    class="relative z-20 max-w-screen-xl gap-20 py-12 mx-auto space-y-10 pt-28 h-max lg:py-32 md:pt-48 lg:pt-56 md:py-24 lg:grid lg:grid-cols-2"
   >
     <Image src={ResponsiveIllustration} alt="" class="w-full lg:h-full" />
     <main
