Added StatSection to services.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import HeroSection from "../pages/sections/index/HeroSection.astro";
 import ProjectSection from "../pages/sections/index/ProjectSection.astro";
 import ServiceSection from "../pages/sections/index/ServiceSection.astro";
 import TechnologySection from "../pages/sections/index/TechnologySection.astro";
-import StatSection from "../pages/sections/index/StatSection.astro";
+import StatSection from "./sections/general/StatSection.astro";
 ---
 
 <Layout
