--- a/src/pages/sections/general/StatSection.astro
+++ b/src/pages/sections/general/StatSection.astro
@@ -5,8 +5,8 @@ const { IoBriefcase, IoDesktop, IoSchool } = IoIcons;
 const { FaStar } = FaIcons;
 ---
 
-<section class="p-2 bg-gradient-to-r bg-brand-gradient">
-  <article class="max-w-screen-xl py-12 mx-auto md:py-24">
+<section class="p-4 bg-gradient-to-br bg-brand-gradient">
+  <article class="relative z-20 max-w-screen-xl py-12 mx-auto md:py-24">
     <main class="grid gap-8 sm:grid-cols-2 md:grid-cols-4">
       <!-- Proyectos Realizados -->
       <div class="flex flex-col items-center justify-center gap-4 text-white">
