Added Hero to Services.

--- a/src/pages/sections/index/AboutSection.astro
+++ b/src/pages/sections/index/AboutSection.astro
@@ -16,10 +16,10 @@ import WebsiteIllustration from "../../../assets/images/illustrations/pair_progr
       <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
       <div class="space-y-2 text-center md:space-y-4 md:text-left">
         <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
-          Profesional Experto en Diseño y Desarrollo Web Personalizados
+          Profesionales Expertos en Diseño y Desarrollo Web Personalizados
         </h2>
         <p
-          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+          class="max-w-lg mx-auto text-sm !leading-7 text-gray-500 md:text-base lg:ml-0"
         >
           Con nuestra agencia 100% dígital ofrecemos plataformas seguras,
           funcionales y personalizadas, asegurando que cada proyecto no solo
@@ -27,7 +27,7 @@ import WebsiteIllustration from "../../../assets/images/illustrations/pair_progr
         </p>
       </div>
       <a
-        href="/"
+        href="/servicios"
         class="text-white border-transparent btn btn-neutral bg-brand-blue max-w-max group"
       >
         Descubre más <FaArrowRight
