Add PricingSection and PricingCard.

--- a/src/components/navigation/FooterBar.astro
+++ b/src/components/navigation/FooterBar.astro
@@ -9,7 +9,7 @@ const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
   <div class="max-w-xl py-12 mx-auto pb:0">
     <header class="flex flex-col items-center justify-center">
       <a
-        class="grid w-40 p-4 text-xl border-transparent place-items-center"
+        class="grid h-20 p-2 text-xl border-transparent w-36 place-items-center"
         href="/"
       >
         <Image src={BrandImage} alt="RysthDesign Logo" class="w-full h-full" />
