--- a/src/pages/sections/index/ProjectSection.astro
+++ b/src/pages/sections/index/ProjectSection.astro
@@ -1,8 +1,8 @@
 ---
 import Subtitle from "@/components/heading/Subtitle.astro";
-import ProjectOne from "../../../assets/images/projects/project_1.png";
-import ProjectTwo from "../../../assets/images/projects/project_2.png";
-import ProjectThree from "../../../assets/images/projects/project_3.png";
+import ProjectOne from "../../../assets/images/projects/project_1.webp";
+import ProjectTwo from "../../../assets/images/projects/project_2.webp";
+import ProjectThree from "../../../assets/images/projects/project_3.webp";
 import ProjectCard from "@/components/ui/ProjectCard.astro";
 ---
 
