--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -1,7 +1,14 @@
 ---
 import BrandImage from "../../assets/images/brand/brand.svg";
 import { Image } from "astro:assets";
-import { FaWhatsapp, FaHome, FaPencilAlt, FaPhoneAlt } from "react-icons/fa";
+import {
+  FaWhatsapp,
+  FaHome,
+  FaPencilAlt,
+  FaPhoneAlt,
+  FaBars,
+} from "react-icons/fa";
+import { HiBars3BottomLeft } from "react-icons/hi2";
 ---
 
 <nav
@@ -13,22 +20,11 @@ import { FaWhatsapp, FaHome, FaPencilAlt, FaPhoneAlt } from "react-icons/fa";
       <div class="">
         <button
           type="button"
-          class="text-white btn btn-ghost lg:hidden ps-0"
+          class="text-white btn btn-ghost lg:hidden ps-0 pe-2"
           aria-label="Toggle button menu"
           id="toggleButton"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-7 h-7"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            ><path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              fill="#ffffff"
-              d="M4 6h16M4 12h8m-8 6h16"></path></svg
-          >
+          <HiBars3BottomLeft className="text-3xl" />
         </button>
         <ul
           class="hidden absolute left-0 right-0 top-4/4 lg:hidden my-4 z-[1] p-4 shadow-xl bg-base-100 rounded-xl space-y-4 min-w-full transition"
