--- a/src/components/navigation/FooterBar.astro
+++ b/src/components/navigation/FooterBar.astro
@@ -1,11 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import * as FaIcons from "react-icons/fa6";
+import { FaInstagram, FaFacebook, FaWhatsapp, FaGoogle } from "react-icons/fa6";
 import BrandImage from "../../assets/images/brand/brand_dark.svg";
-const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
 ---
 
-<footer class="p-4 bg-white">
+<footer class="p-4 bg-neutral-50">
   <div class="max-w-xl py-12 mx-auto pb:0">
     <header class="flex flex-col items-center justify-center">
       <a
@@ -49,6 +48,15 @@ const { FaInstagram, FaFacebook, FaWhatsapp } = FaIcons;
         >
           <FaWhatsapp className="text-xl" />
           <span class="sr-only">Whatsapp</span></a
+        >
+      </li>
+      <li>
+        <a
+          href="https://maps.app.goo.gl/TWchQ4wV5Lanu2i26"
+          class="flex items-center gap-1 text-sm text-gray-500 transition duration-200 hover:text-indigo-900"
+        >
+          <FaGoogle className="text-xl" />
+          <span class="sr-only">Google</span></a
         >
       </li>
     </ul>
