--- a/src/pages/sections/general/StatSection.astro
+++ b/src/pages/sections/general/StatSection.astro
@@ -31,7 +31,7 @@ const { FaStar } = FaIcons;
         <IoBriefcase className="h-20 w-20" />
         <div class="space-y-2 text-center">
           <p class="text-4xl font-bold">+700</p>
-          <p class="text-sm">Horas de Experiencia Profesional</p>
+          <p class="text-sm">Horas en Desarrollo Web</p>
         </div>
       </div>
 
