Update Pricing Cards.

--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -149,6 +149,7 @@ import StatSection from "./sections/general/StatSection.astro";
             "Diseño Web Profesional",
             "Certificación SSL",
             "Dominio Gratuito",
+            "Hosting Gratuito",
             "Optimizado para Móviles",
           ]}
           maintanceText="Mantenimiento y Optimización $15/mes"
@@ -162,15 +163,16 @@ import StatSection from "./sections/general/StatSection.astro";
           features={[
             "Gestor de Contenido",
             "Tienda en Línea",
-            "Botón de Pago",
-            "Hasta 100 Productos",
+            "Pedidos por WhatsApp",
+            "Hasta 50 Productos",
             "Diseño Web Profesional",
             "Certificación SSL",
             "Dominio Gratuito",
+            "Hosting Gratuito",
             "Optimizado para Móviles",
           ]}
           buttonText="Comenzar Ahora"
-          maintanceText="Mantenimiento y Optimización $100/mes"
+          maintanceText="Mantenimiento y Optimización $75/mes"
           highlight={true}
         />
         {/* Plan Aplicación Web */}
@@ -185,10 +187,11 @@ import StatSection from "./sections/general/StatSection.astro";
             "Diseño Web Profesional",
             "Certificación SSL",
             "Dominio Gratuito",
+            "Hosting Gratuito",
             "Optimizado para Móviles",
           ]}
           buttonText="Comenzar Ahora"
-          maintanceText="Mantenimiento y Optimización $125/mes"
+          maintanceText="Mantenimiento y Optimización $100/mes"
           highlight={false}
         />
       </div>
