Enhance NavigationBar y StatSection

--- a/src/pages/sections/general/StatSection.astro
+++ b/src/pages/sections/general/StatSection.astro
@@ -7,40 +7,48 @@ const { FaStar } = FaIcons;
 
 <section class="p-4 bg-gradient-to-br bg-brand-gradient">
   <article class="relative z-20 max-w-screen-xl py-12 mx-auto md:py-24">
-    <main class="grid gap-8 sm:grid-cols-2 md:grid-cols-4">
+    <main class="grid grid-cols-2 gap-y-8 md:gap-8 md:grid-cols-4">
       <!-- Proyectos Realizados -->
-      <div class="flex flex-col items-center justify-center gap-4 text-white">
-        <IoDesktop className="h-20 w-20" />
+      <div
+        class="flex flex-col items-center justify-center gap-2 text-white md:gap-4"
+      >
+        <IoDesktop className="md:h-20 md:w-20 w-12 h-12" />
         <div class="space-y-2 text-center">
-          <p class="text-4xl font-bold">+10</p>
-          <p class="text-sm">Proyectos Realizados</p>
+          <p class="text-2xl font-bold md:text-4xl">+10</p>
+          <p class="text-xs md:text-sm">Proyectos Realizados</p>
         </div>
       </div>
 
       <!-- Años de Experiencia Académica -->
-      <div class="flex flex-col items-center justify-center gap-4 text-white">
-        <IoSchool className="h-20 w-20" />
+      <div
+        class="flex flex-col items-center justify-center gap-2 text-white md:gap-4"
+      >
+        <IoSchool className="md:h-20 md:w-20 w-12 h-12" />
         <div class="space-y-2 text-center">
-          <p class="text-4xl font-bold">+4</p>
-          <p class="text-sm">Años de Estudio Académico</p>
+          <p class="text-2xl font-bold md:text-4xl">+4</p>
+          <p class="text-xs md:text-sm">Años de Estudio Académico</p>
         </div>
       </div>
 
       <!-- Experiencia en Desarrollo Web -->
-      <div class="flex flex-col items-center justify-center gap-4 text-white">
-        <IoBriefcase className="h-20 w-20" />
+      <div
+        class="flex flex-col items-center justify-center gap-2 text-white md:gap-4"
+      >
+        <IoBriefcase className="md:h-20 md:w-20 w-12 h-12" />
         <div class="space-y-2 text-center">
-          <p class="text-4xl font-bold">+700</p>
-          <p class="text-sm">Horas en Desarrollo Web</p>
+          <p class="text-2xl font-bold md:text-4xl">+700</p>
+          <p class="text-xs md:text-sm">Horas en Desarrollo Web</p>
         </div>
       </div>
 
       <!-- Reseñas en Google -->
-      <div class="flex flex-col items-center justify-center gap-4 text-white">
-        <FaStar className="h-20 w-20" />
+      <div
+        class="flex flex-col items-center justify-center gap-2 text-white md:gap-4"
+      >
+        <FaStar className="md:h-20 md:w-20 w-12 h-12" />
         <div class="space-y-2 text-center">
-          <p class="text-4xl font-bold">+20</p>
-          <p class="text-sm">Reseñas de Clientes</p>
+          <p class="text-2xl font-bold md:text-4xl">+20</p>
+          <p class="text-xs md:text-sm">Reseñas de Clientes</p>
         </div>
       </div>
     </main>
