--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -14,8 +14,8 @@ import {
   HiOutlineLightBulb,
 } from "react-icons/hi2";
 import { IoLogoWebComponent } from "react-icons/io5";
-import Layout from "../layouts/Layout.astro";
-import StatSection from "./sections/general/StatSection.astro";
+import Layout from "../../layouts/Layout.astro";
+import StatSection from "../sections/general/StatSection.astro";
 ---
 
 <Layout
