--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -58,7 +58,18 @@ import { HiBars3BottomLeft } from "react-icons/hi2";
     <div class="hidden text-white navbar-center lg:flex">
       <ul class="gap-2 px-1 menu menu-horizontal">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/servicios">Servicios</a></li>
+        <li>
+          <details>
+            <summary>
+              <a href="/servicios">Servicios</a>
+            </summary>
+            <ul class="p-2 w-max text-neutral-900">
+              <li><a href="/">Diseño Web</a></li>
+              <li><a href="/">Tienda en Línea</a></li>
+              <li><a href="/">Aplicaciones Web</a></li>
+            </ul>
+          </details>
+        </li>
         <li><a href="/contactos">Contactos</a></li>
       </ul>
     </div>
